fix safari gap

--- a/src/pages/Mission/mission.module.css
+++ b/src/pages/Mission/mission.module.css
@@ -1,5 +1,5 @@
 .page {
-  gap: 2em;
+  gap: 2em 0;
 }
 
 .missionHero {
